--- a/grid/displaygrid.html
+++ b/grid/displaygrid.html
@@ -9,26 +9,28 @@
             height: 600px;
             display: grid;
             grid-template-rows: repeat(3,100px);
-            grid-template-columns: 100px 1fr 2fr;
+            grid-template-columns: 100px 100px 100px;
             grid-auto-rows: 50px;
        /*     grid-template-columns: repeat(auto-fill,100px);
             grid-template-columns: repeat(3,100px);
             grid-template-columns: 1fr 1fr;*/
             background-color: #999;
+            justify-content: space-evenly;
+            align-content: space-evenly;
         }
     </style>
 </head>
 <body>
 <div id="content">
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
-    <div class="item"></div>
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
     <div class="item">10</div>
     <div class="item">11</div>
     <div class="item">12</div>
